Changed error handling for POST and PUT routes
